--- a/task-03.html
+++ b/task-03.html
@@ -1,37 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Задание 3</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-                Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: #fff;
-            color: #424242;
-            line-height: 1.5;
-        }
+    <title>Task 3</title>
+    <link rel="stylesheet" href="css/common.css" />
+  </head>
+  <body>
+    <p><a href="index.html">Go back</a></p>
 
-        .gallery {
-            display: flex;
-            list-style: none;
-        }
-
-        .gallery>li:not(:last-child) {
-            margin-right: 10px;
-        }
-    </style>
-</head>
-
-<body>
-    <p><a href="index.html">На главную</a></p>
-
-    <ul id="gallery"></ul>
+    <ul class="gallery"></ul>
 
     <script src="js/task-03.js" type="module"></script>
-</body>
-
+  </body>
 </html>
