--- a/task-05.html
+++ b/task-05.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Задание 5</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-                Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: #fff;
-            color: #424242;
-            line-height: 1.5;
-        }
-    </style>
-</head>
+    <title>Task 5</title>
+    <link rel="stylesheet" href="css/common.css" />
+  </head>
+  <body>
+    <p><a href="index.html">Go back</a></p>
 
-<body>
-    <p><a href="index.html">На главную</a></p>
-
-    <input type="text" placeholder="Ваше имя?" id="name-input" />
-    <h1>
-        Привет,
-        <span id="name-output">незнакомец</span>
-        !
-    </h1>
+    <input type="text" id="name-input" placeholder="Please enter your name" />
+    <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
 
     <script src="js/task-05.js" type="module"></script>
-</body>
-
+  </body>
 </html>
