--- a/task-07.html
+++ b/task-07.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Задание 7</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-                Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: #fff;
-            color: #424242;
-            line-height: 1.5;
-        }
-    </style>
-</head>
+    <title>Task 7</title>
+    <link rel="stylesheet" href="css/common.css" />
+  </head>
+  <body>
+    <p><a href="index.html">Go back</a></p>
 
-<body>
-    <p><a href="index.html">На главную</a></p>
-
-    <input id="font-size-control" type="range" />
+    <input id="font-size-control" type="range" min="16" max="96" />
     <br />
-    <span id="text">Абракадабра!</span>
+    <span id="text">Abracadabra!</span>
 
     <script src="js/task-07.js" type="module"></script>
-</body>
-
+  </body>
 </html>
