--- a/task-08.html
+++ b/task-08.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Задание 8</title>
+    <title>Task 8</title>
+    <link rel="stylesheet" href="css/common.css" />
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-                Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            line-height: 1.5;
-        }
+      .login-form {
+        max-width: 320px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .login-form label {
+        margin-bottom: 16px;
+      }
+
+      .login-form input,
+      .login-form button {
+        width: 100%;
+        padding: 4px;
+        font: inherit;
+      }
     </style>
-</head>
+  </head>
+  <body>
+    <p><a href="index.html">Go back</a></p>
 
-<body>
-    <p><a href="index.html">На главную</a></p>
-
-    <div id="controls">
-        <input type="number" min="0" max="100" step="1" />
-        <button type="button" data-action="render">Создать</button>
-        <button type="button" data-action="destroy">Очистить</button>
-    </div>
-
-    <div id="boxes"></div>
+    <form class="login-form">
+      <label>
+        Email
+        <input type="email" name="email" />
+      </label>
+      <label>
+        Password
+        <input type="password" name="password" />
+      </label>
+      <button type="submit">Login</button>
+    </form>
 
     <script src="js/task-08.js" type="module"></script>
-</body>
-
+  </body>
 </html>
